gjorde en liten forandring til LZ. la til aL istedenfor lL